Fix for Bug 372177: No focus event fired when a window "gets focus" because another one has been minimized Patch by Oliver Yeoh r=emaijala sr=roc